--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "jquery": "^3.2.1",
+    "semantic-ui-css": "^2.2.12",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0"
   },
